# Stressor

./: .gitignore  Cargo.toml  README.md
StressorInstallerPkg/: installer.nsi
src/: main.rs
src/app/: analyzer.rs  app.rs  config.rs  cpu.rs  cpu_stress.rs  memory.rs  mod.rs  onload.rs  selectable_stress.rs  storage.rs  storage_stress.rs  stress_test.rs
src/app/selectable_stress/: compression_stress.rs  matrix_stress.rs  ram_stress.rs  tightloop_stress.rs
src/exposures/: CpuTempDrv.inf  ReadCPUTemp.vb  cpu_temp_drv.c  read_cpu_temp.c
