[package]
name = "stressor"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.32.0", features = ["glow", "persistence", "default_fonts"] }
egui = "0.32.0"
egui_plot = "0.32.0"
sysinfo = "0.29.10"
wmi = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
once_cell = "1.18"
rand = "0.8"
chrono = "0.4"
atomic_float = "0.1"
image = "0.24"
